@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 2.0100
+// generated by Fast Light User Interface Designer (fluid) version 2.1000
 
 #ifndef tabs_h
 #define tabs_h
